force-app/main/default/objects/Product2/fields/QuickBooks_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>QuickBooks Item Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>