force-app/main/default/objects/Product2/fields/QuickBooks_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Sync_Status__c</fullName>
    <label>QuickBooks Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
                <default>true</default>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>