force-app/main/default/objects/Product2/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
                <default>true</default>
                <label>Service</label>
            </value>
            <value>
                <fullName>NonInventory</fullName>
                <label>Non-Inventory</label>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>